--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -9,3 +9,6 @@
 @import "./../../components/Main/Main";
 @import "./../../components/Convert/Convert";
 @import "./../../components/Input/Input";
+
+// Media queries
+@import "./media-queries";
