--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -137,3 +137,44 @@ body {
       .Input form .buttons .amount {
         margin: auto 0 auto 2rem;
         font-size: 2rem; }
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  .Main {
+    flex-direction: column; }
+  .Convert {
+    width: 100%; }
+  .Input {
+    width: 100%;
+    height: 100%; }
+    .Input form {
+      justify-content: center;
+      margin-left: 0;
+      padding: 0 1rem; }
+      .Input form select,
+      .Input form input {
+        width: 100%; } }
+
+/* Smartphones (landscape) ----------- */
+@media only screen and (min-width: 321px) and (max-width: 811px) {
+  .Convert {
+    height: 100%;
+    width: 100%; }
+  .Input {
+    height: 100%;
+    width: 100%; }
+    .Input form {
+      justify-content: center;
+      margin-left: 0;
+      padding: 0 1rem; }
+      .Input form select,
+      .Input form input {
+        width: 100%; } }
+
+@media only screen and (max-with: 812px) and (max-height: 375px) and (orientation: landscape) {
+  .Main {
+    flex-direction: row; }
+  .Convert {
+    margin-top: 3rem;
+    width: 100%;
+    height: 100%; } }
