Added webkits to styles.css

--- a/src/components/Input/_Input.scss
+++ b/src/components/Input/_Input.scss
@@ -15,6 +15,10 @@
       font-size: 2rem;
     }
 
+    #searchform input {
+      appearance: none;
+    }
+
     select,
     input {
       width: 75%;
